// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`react/UIP renders correctly - basic 1`] = `
<div>
  <p
    class="ui-p ui-p--large"
  >
    Test
  </p>
</div>
`;

exports[`react/UIP renders correctly - with id 1`] = `
<div>
  <p
    class="ui-p"
    id="test"
  >
    Test
  </p>
</div>
`;

exports[`react/UIP renders correctly - with itemProp 1`] = `
<div>
  <p
    class="ui-p"
    itemprop="description"
  >
    Test
  </p>
</div>
`;
